[gd_scene load_steps=8 format=3 uid="uid://cogkgei4bpytl"]

[ext_resource type="Script" path="res://level.gd" id="1_4avv4"]
[ext_resource type="Texture2D" uid="uid://duwb1twkoya1m" path="res://images/240_F_443693407_zQJa1GCqtY6C0OyrRjYGlMDi15XdTaW1.jpg" id="1_gd7dh"]
[ext_resource type="PackedScene" uid="uid://cf42mal5pf385" path="res://Player/player.tscn" id="1_ig587"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_rttsb"]
a = Vector2(11492, 0)
b = Vector2(-11492, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_ludcu"]
a = Vector2(0, -9794)
b = Vector2(0, 9794)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_a1fjp"]
a = Vector2(0, -9794)
b = Vector2(0, 9794)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_lol8x"]
a = Vector2(11492, 0)
b = Vector2(-11492, 0)

[node name="Level" type="Node2D"]
script = ExtResource("1_4avv4")

[node name="Ground" type="Node2D" parent="."]
position = Vector2(238, 117)
metadata/_edit_lock_ = true

[node name="Grass" type="Sprite2D" parent="Ground"]
modulate = Color(0.294118, 0.294118, 0.294118, 1)
texture_repeat = 2
position = Vector2(58.5, 56)
scale = Vector2(1.24375, 1.46667)
texture = ExtResource("1_gd7dh")
region_enabled = true
region_rect = Rect2(-13146.7, -9035.11, 29912.8, 21839.3)

[node name="Player" parent="." instance=ExtResource("1_ig587")]
position = Vector2(608, 351)
speed = 100
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.35, 0.35)

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
visible = false
color = Color(0.835294, 0.835294, 0.835294, 1)
blend_mode = 1
metadata/_edit_lock_ = true

[node name="MapBoundry" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="NorthBorder" type="Area2D" parent="MapBoundry"]
position = Vector2(0, -9794)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapBoundry/NorthBorder"]
shape = SubResource("SegmentShape2D_rttsb")

[node name="WestBorder" type="Area2D" parent="MapBoundry"]
position = Vector2(-11492, 0)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapBoundry/WestBorder"]
shape = SubResource("SegmentShape2D_ludcu")

[node name="EastBorder" type="Area2D" parent="MapBoundry"]
position = Vector2(11492, 1)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapBoundry/EastBorder"]
shape = SubResource("SegmentShape2D_a1fjp")

[node name="SouthBorder" type="Area2D" parent="MapBoundry"]
position = Vector2(0, 9794)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapBoundry/SouthBorder"]
shape = SubResource("SegmentShape2D_lol8x")

[connection signal="body_entered" from="MapBoundry/NorthBorder" to="." method="_on_north_border_body_entered"]
[connection signal="body_entered" from="MapBoundry/WestBorder" to="." method="_on_west_border_body_entered"]
[connection signal="body_entered" from="MapBoundry/EastBorder" to="." method="_on_east_border_body_entered"]
[connection signal="body_entered" from="MapBoundry/SouthBorder" to="." method="_on_south_border_body_entered"]
